# real-self-skills

./: .gitignore  code agent config.md
cmake/: CMakeLists.txt
codebase-core-analyse/: SKILL.md
codebase_core_analyse/: SKILL.md
cpp-code-review/: check-point.txt
enforce-zh-cn/: SKILL.md
proj-init/: SKILL.md
proj-init/assets/cmake-proj-template/: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
proj-init/assets/cmake-proj-template/src/: CMakeLists.txt
proj-init/assets/cmake-proj-template/tests/: CMakeLists.txt
test-driven-development/: SKILL.md  SKILL.zh-cn.md  testing-anti-patterns.zh-cn.md
test-driven-development/assets/: README.md  prd-plan-dev-deploy-iterate.md
test-driven-development/assets/cmake/: CMake-FetchContent-Guide.md
translate-to-chinese-context/: SKILL.md
